--- a/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
@@ -38,7 +38,7 @@ core-packages:
 
 default-package-overrides:
   - store < 0.4.1               # https://github.com/fpco/store/issues/104
-  # LTS Haskell 8.8
+  # LTS Haskell 8.9
   - abstract-deque ==0.3
   - abstract-par ==0.3.3
   - AC-Vector ==2.3.2
@@ -387,7 +387,7 @@ default-package-overrides:
   - concurrency ==1.0.0.0
   - concurrent-output ==1.7.9
   - concurrent-supply ==0.1.8
-  - conduit ==1.2.9
+  - conduit ==1.2.9.1
   - conduit-combinators ==1.1.1
   - conduit-connection ==0.1.0.3
   - conduit-extra ==1.1.15
@@ -512,7 +512,7 @@ default-package-overrides:
   - directory-tree ==0.12.1
   - discount ==0.1.1
   - disk-free-space ==0.1.0.1
-  - disposable ==0.2.0.3
+  - disposable ==0.2.0.4
   - distance ==0.1.0.0
   - distributed-closure ==0.3.4.0
   - distributed-process ==0.6.6
@@ -594,7 +594,7 @@ default-package-overrides:
   - ersatz ==0.3.1
   - esqueleto ==2.5.1
   - etcd ==1.0.5
-  - ether ==0.4.0.2
+  - ether ==0.4.1.0
   - euphoria ==0.8.0.0
   - event ==0.1.4
   - eventstore ==0.14.0.1
@@ -612,7 +612,7 @@ default-package-overrides:
   - extensible ==0.3.7
   - extensible-effects ==1.11.0.4
   - extensible-exceptions ==0.1.1.4
-  - extra ==1.5.1
+  - extra ==1.5.2
   - extract-dependencies ==0.2.0.1
   - fail ==4.9.0.0
   - farmhash ==0.1.0.5
@@ -666,7 +666,7 @@ default-package-overrides:
   - format-numbers ==0.1.0.0
   - formatting ==6.2.4
   - fortran-src ==0.1.0.4
-  - foundation ==0.0.4
+  - foundation ==0.0.6
   - Frames ==0.1.9
   - free ==4.12.4
   - free-vl ==0.1.4
@@ -896,7 +896,7 @@ default-package-overrides:
   - harp ==0.4.2
   - hasbolt ==0.1.1.2
   - hashable ==1.2.6.0
-  - hashable-time ==0.2
+  - hashable-time ==0.2.0.1
   - hashmap ==1.3.2
   - hashtables ==1.2.1.1
   - haskeline ==0.7.3.1
@@ -1023,7 +1023,7 @@ default-package-overrides:
   - hslua ==0.4.1
   - hsndfile ==0.8.0
   - hsndfile-vector ==0.5.2
-  - HsOpenSSL ==0.11.4.4
+  - HsOpenSSL ==0.11.4.6
   - HsOpenSSL-x509-system ==0.1.0.3
   - hsp ==0.10.0
   - hspec ==2.4.3
@@ -1056,8 +1056,8 @@ default-package-overrides:
   - HTTP ==4000.3.6
   - http-api-data ==0.3.5
   - http-client ==0.5.6.1
-  - http-client-openssl ==0.2.0.4
-  - http-client-tls ==0.3.4
+  - http-client-openssl ==0.2.0.5
+  - http-client-tls ==0.3.4.1
   - http-common ==0.8.2.0
   - http-conduit ==2.2.3.1
   - http-date ==0.0.6.1
@@ -1140,7 +1140,7 @@ default-package-overrides:
   - io-storage ==0.3
   - io-streams ==1.3.6.1
   - io-streams-haproxy ==1.0.0.1
-  - ip6addr ==0.5.2
+  - ip6addr ==0.5.3
   - iproute ==1.7.1
   - IPv6Addr ==0.6.3
   - irc ==0.6.1.0
@@ -1223,7 +1223,7 @@ default-package-overrides:
   - lens-family-th ==0.5.0.0
   - lens-regex ==0.1.0
   - lens-simple ==0.1.0.9
-  - lentil ==1.0.8.0
+  - lentil ==1.0.9.0
   - leveldb-haskell ==0.6.4
   - lexer-applicative ==2.1.0.1
   - lhs2tex ==1.19
@@ -1288,7 +1288,7 @@ default-package-overrides:
   - matplotlib ==0.4.3
   - matrices ==0.4.4
   - matrix ==0.3.5.0
-  - matrix-market-attoparsec ==0.1.0.5
+  - matrix-market-attoparsec ==0.1.0.7
   - maximal-cliques ==0.1.1
   - mbox ==0.3.3
   - mcmc-types ==1.0.3
@@ -1477,7 +1477,7 @@ default-package-overrides:
   - pandoc-citeproc ==0.10.4.1
   - pandoc-types ==1.17.0.5
   - pango ==0.13.3.1
-  - parallel ==3.2.1.0
+  - parallel ==3.2.1.1
   - parallel-io ==0.3.3
   - parseargs ==0.2.0.8
   - parsec ==3.1.11
@@ -1527,7 +1527,7 @@ default-package-overrides:
   - pipes-category ==0.2.0.1
   - pipes-concurrency ==2.0.7
   - pipes-csv ==1.4.3
-  - pipes-extras ==1.0.8
+  - pipes-extras ==1.0.9
   - pipes-fluid ==0.5.0.3
   - pipes-group ==1.0.6
   - pipes-misc ==0.2.5.0
@@ -1674,7 +1674,7 @@ default-package-overrides:
   - regex-tdfa ==1.2.2
   - regex-tdfa-text ==1.0.0.3
   - reinterpret-cast ==0.1.0
-  - relational-query ==0.8.3.5
+  - relational-query ==0.8.3.6
   - relational-query-HDBC ==0.6.0.2
   - relational-record ==0.1.7.1
   - relational-schemas ==0.1.3.1
@@ -1812,7 +1812,7 @@ default-package-overrides:
   - smtLib ==1.0.8
   - smtp-mail ==0.1.4.6
   - snap-core ==1.0.2.0
-  - snap-server ==1.0.1.1
+  - snap-server ==1.0.2.0
   - snowflake ==0.1.1.1
   - soap ==0.2.3.3
   - soap-openssl ==0.1.0.2
@@ -1870,6 +1870,7 @@ default-package-overrides:
   - storable-complex ==0.2.2
   - storable-endian ==0.2.6
   - storable-record ==0.0.3.1
+  - store ==0.4.2
   - store-core ==0.4
   - Strafunski-StrategyLib ==5.0.0.10
   - stratosphere ==0.4.2
@@ -1944,7 +1945,7 @@ default-package-overrides:
   - tasty-smallcheck ==0.8.1
   - tasty-stats ==0.2.0.2
   - tasty-tap ==0.0.4
-  - tasty-th ==0.1.5
+  - tasty-th ==0.1.6
   - Taxonomy ==1.0.2
   - TCache ==0.12.1
   - tce-conf ==1.3
@@ -2254,7 +2255,7 @@ default-package-overrides:
   - yesod-auth-basic ==0.1.0.2
   - yesod-auth-hashdb ==1.6.0.1
   - yesod-bin ==1.5.2.2
-  - yesod-core ==1.4.32
+  - yesod-core ==1.4.33
   - yesod-eventsource ==1.4.1
   - yesod-fay ==0.8.0
   - yesod-form ==1.4.11
